--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
             // setup signin and signup button events
             $("#login").on("click", function(){
-
+/*trestttttt*/
 
  $.ajax({
 				    type       : "POST",
