--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             // setup signin and signup button events
             $("#login").on("click", function(){
 /*trestttttt*/
-
+/*trestttttt*/
+/*trestttttt*/
+/*trestttttt*/
  $.ajax({
 				    type       : "POST",
 				    url        : "http://sirkeci.azurewebsites.net/api/Core/GetResources",
